2012-03-06  Eric Wasylishen  <ewasylishen@gmail.com>

	* GGnomeThemeInitialization.m:
	- Remove an image from the NSImage name dictionary by calling
	[img setName: nil] rather than [img setName: @"kick_..."];.
	- Remove radio/checkbox/slider images before installing new
	ones (since -setName: does nothing if an image name
	is already in use, so it's important to remove the old image)

2012-03-06  Eric Wasylishen  <ewasylishen@gmail.com>

	* GGScrollKnobCell.m:
	* NSScroller+Gnome.m:
	* GGnomeThemeInitialization.m:
	* GGScrollStepperCell.m:
	* GGPainter.m: Quick fixes for segfaults from dereferencing
	NULL widgets.

2012-03-06  Eric Wasylishen  <ewasylishen@gmail.com>

	* GNUmakefile: Use pkg-config. Put linker commands in
	Gtk_BUNDLE_LIBS. Remove reference to etoile.make.

2012-03-06 00:16-EST Gregory John Casamento <greg.casamento@gmail.com>

	* NSWindow+Gnome.m: Stub to be called when reparenting
	an Xwindow into a GtkWindow for native menus.

2012-03-06 00:14-EST Gregory John Casamento <greg.casamento@gmail.com>

	* GGnomeTheme.h: keep timer
	* GGnomeThemeInitialization.m: Initialize gconf so that
	theme recieves notifications when theme is changed.
	* GGnomeTheme.m: Changes to support theme update when
	theme changes.
	* GNUmakefile: Update makefile to include new source file.
	* GtkInfo.plist: Fix icon issue.

2011-06-09 14:04-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GGnomeThemeInitialization.h: Added declarations for functions
	to get the font	based on the default from GNOME.
	* GGnomeThemeInitialization.m: Call functions to get the font
	from the GNOME config.  If it is not one which is available to
	GNUstep pick "Liberation Sans" or "Liberation Mono" if those
	are unavailable do not change.

2011-06-09 11:08-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* NSTabView+Gnome.m: Move the tabs over a little when drawing them
	so that the align better with the notebook widget underneath.
