@@ -1,3 +1,8 @@
+2013-12-25  German Arias <germanandre@gmx.es>
+
+	* GGnomeTheme.m: Add -doesProcessEventsForPopUpMenu to return YES, since
+	this works now.
+
 2012-03-06  Eric Wasylishen  <ewasylishen@gmail.com>
 
 	* GGnomeThemeInitialization.m:
